# openGL-experiments

./: .gitignore  CMakeLists.txt  README.md  changes.html  opengl-setup-rundown.html  plan.html
custom/: camera.h  shader.h  shapes.h
explanations/: cmake-and-adding-libraries.html
learnOpenGL/: CMakeLists.txt  helloTriangles.cpp  main.cpp
learnOpenGL/shaders/: complexFragment.glsl  floorVertex.glsl  fragment.glsl  vertex.glsl
